--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "babel-preset-travix": "~1.1",
     "express": "4.x",
     "ip": "^1.1.3",
-    "lodash": "^4.13.1"
+    "lodash": "^4.13.1",
+    "path-to-regexp": "^1.5.3"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
     "babel-eslint": "^6.0.4",
     "babel-polyfill": "^6.9.1",
     "chai": "^3.5.0",
